fixed overlapping divs and footer positioning

--- a/index/css/style.css
+++ b/index/css/style.css
@@ -78,14 +78,14 @@
   padding: 10px;
   width: 50%;
   height: 75%;
-  position: relative;
+  display: grid;
   background-color: lightgray;
 }
 
 .footerContentWrapper{
   padding: 30px;
   text-align: center;
-  position: absolute;
+  position: relative;
   bottom:0;
   margin: auto;
   width: 100%;
